<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/habitName"
        android:inputType="text" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/habitDescription"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/priorityTextView"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/habitPriority" />

        <Spinner
            android:id="@+id/prioritySpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/typeTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/habitType" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/goodRB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/habitGood" />

            <RadioButton
                android:id="@+id/badRB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/habitBad" />

        </RadioGroup>
    </LinearLayout>

    <EditText
        android:id="@+id/repeatsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/habitRepeats"
        android:inputType="number"
        android:singleLine="true" />

    <EditText
        android:id="@+id/periodEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/habitPeriod"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/createButton"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:text="@string/apply" />
    </LinearLayout>

</LinearLayout>
